--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -46,8 +46,9 @@
 }
 
 .dark-nav{
-  background: #212EA0;
-  color: white;
+  /* background: #212EA0; */
+  background: white;
+  color:black;
   transition: 0.5s ease-in-out;
 }
 
@@ -151,4 +152,26 @@
 
 .media-icon:hover{
   opacity: 1;
+}
+
+/* title component */
+.title-cont{
+  text-align: center;
+  text-transform: uppercase;
+  color: #212EA0;
+  font-size: 16px;
+  font-weight: 600;
+  margin: 20px 0 30px;
+  /* border:2px solid red; */
+
+  & h2{
+    font-size: 32px;
+    color: #000f3b;
+    margin-top: 5px;
+    text-transform: none;
+  }
+}
+
+.mail-icon{
+  color:#f6b154;
 }
