--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -17,6 +17,7 @@
 .logo{
   width: 100%;
   max-width:20rem;
+  cursor: pointer;
 }
 
 .logoText{
@@ -46,7 +47,7 @@
 }
 
 .dark-nav{
-  /* background: #212EA0; */
+  background:wheat;
   background: white;
   color:black;
   transition: 0.5s ease-in-out;
@@ -66,6 +67,18 @@
   justify-content: center;
   align-items: center;
 }
+
+/* home */
+
+.home-btn{
+  cursor: pointer;
+}
+
+.home-btn:hover{
+  opacity: 1;
+}
+
+/* contact */
 
 
 @media (max-width:768px) {
