Add changes in About ,Contact,Faq,Services and Footer

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -16,8 +16,9 @@
 
 .logo{
   width: 100%;
-  max-width:20rem;
+  max-width:30rem;
   cursor: pointer;
+  /* border:2px solid red; */
 }
 
 .logoText{
